--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,11 @@ textarea {
     clear: both;
     width: 450px;
     height: 200px;
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -ms-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
 }
 .window .name {
     float: left;
@@ -227,6 +232,11 @@ textarea {
     text-align: center;
     font-size: 14px;
     border-top: 4px solid #49c3cc;
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -ms-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
 }
 #qr-wrapper li.border {
     border-top: 4px solid #2e98d0;
